# matmul-benchmark

./: .gitignore  CMakeLists.txt  README.md
.devin/: config.local.json
include/: matmul_common.hpp
python/: benchmark.py  plot.py  requirements.txt
results/: cpu_results.csv  python_results.csv
scripts/: run_cpu.sh  run_gpu.sh
src/cpu/: CMakeLists.txt  main.cpp  matmul_blas.hpp  matmul_cpu.hpp  matmul_eigen.hpp
src/gpu/: CMakeLists.txt  main.cu  matmul_gpu.cuh
